--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="client.php">Home</a></li>
                     <li><a href="suggest1.php">suggest</a></li>
+                    <li><a href="soilhealth.php">soil Health</a></li>
 
                 </ul>
             </nav>
